--- a/分工细节/语法分析.md
+++ b/分工细节/语法分析.md
@@ -6,7 +6,9 @@ LR分析的基本思想是，在规范归约过程中，⼀⽅⾯记住已移进
 
 LR的本质是双栈+DFA，而`SLR`就是LR(0)+FOLLOW集。
 
-<img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501130005226.png" alt="image-20240501130005226" style="zoom:33%;" />
+![image](https://github.com/yuxi-hoopy/tju-COMPILER-2024-hyx/assets/129140901/4e6471ad-5dc5-4437-ab8e-83089a9cdef9)
+
+
 
 
 
@@ -83,19 +85,12 @@ unordered_map<string, unordered_map<string, string>> actionTable;//action表
 
 ### ③对每个非终结符求FIRST集、FOLLOW集
 
-<img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501171814547.png" alt="image-20240501171814547" style="zoom: 33%;" />
-
-<img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501171644430.png" alt="image-20240501171644430" style="zoom:50%;" />
 
 ### ④根据②③判断文法是否满足SLR文法条件
 
-<img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501125618669.png" alt="image-20240501125618669" style="zoom: 50%;" />
 
 ### ⑤利用②构造ACTION表和GOTO表
 
-如果满足SLR（应该是SLR）
-
-![image-20240501171952108](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501171952108.png)
 
 ### ⑥利用分析表进行移进-规约过程
 
@@ -110,6 +105,7 @@ compUnit -> (decl | funcDef)* EOF;
 需要进一步处理才能用LR(0) or SLR。
 
 去除闭包和或，将产生式简化为A ->B的形式，得到grammer.txt。注意这里不能直接用往届的txt
+ps：已解决，手动修正，去除闭包、直接左递归和或运算符。
 
 ## 关于②、③、④：先判断文法是否符合LR(0)规范
 
@@ -121,21 +117,11 @@ compUnit -> (decl | funcDef)* EOF;
 
      【G'为拓广文法：引进⼀个不出现在G中的⾮终结符S’，并加进⼀个新产⽣式S’→S，⽽这个S’是G’的开始符号。那么我们称G’是G的拓⼴⽂法】
 
-     构造算法如下：
-
-     <img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501104304245.png" alt="image-20240501104304245" style="zoom:33%;" />
-
-     具体过程可以参考作业4：
-
-   <img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501105528573.png" alt="image-20240501105528573" style="zoom:50%;" />
 
 2. ### 判断是否存在规约-规约和规约-移进冲突，不存在则LR(0)；存在则判断FOLLOW集相交情况，大概率是SLR文法了
 
 对于每个项目集I判断。这一步需要计算FIRST集和FOLLOW集
 
-<img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501125618669.png" alt="image-20240501125618669" style="zoom: 50%;" />
-
-<img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501125832740.png" alt="image-20240501125832740" style="zoom:33%;" />
 
 ## 填写GOTO表和ACTION表---这2个表组合起来为预测分析表
 
@@ -145,16 +131,8 @@ compUnit -> (decl | funcDef)* EOF;
 
 看看是LR还是SLR，是哪个用哪个。
 
-<img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501104001843.png" alt="image-20240501104001843" style="zoom:33%;" />![image-20240501165925581](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501165925581.png)
-
 ## 利用预测分析表进行移进-规约过程
 
 LR过程原理如图：如果是SLR也是这个动作，二者的不同之处体现在分析表里，对表的使用方法一样
 
 LR分析器的运行原理和SLR分析器类似，二者的不同之处在于它们使用不同的分析表。然而，它们在使用预测分析表上的方法是相同的。
-
-![image-20240501172305149](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501172305149.png)
-
-对于SLR：
-
-![image-20240501171234770](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20240501171234770.png)
